deploy/argocd/manifests/infrastructure/kube-prometheus-stack/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    spec.ingressClassName: traefik
  labels:
    app.kubernetes.io/managed-by: Helm
  name: kube-prometheus-stack-grafana-ingress
  namespace: monitoring 
spec:
  rules:
  - host: grafana.scottseo.tech
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-grafana 
            port:
              name: http-web 
        path: /
        pathType: Prefix
